--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                             <a href="#coureses">Courses</a>
                         </div>
                         <div class="item">
-                            <a href="">Pricing</a>
+                            <a href="#pricing">Pricing</a>
                         </div>
                         <div class="item">
-                            <a href="">Reviews</a>
+                            <a href="#Reviews">Reviews</a>
                         </div>
                         <button class="btn btn-sign_up">
                             <p>Sign up</p>
@@ -212,7 +212,7 @@
             </div>
         </div>
 
-        <div class="features">
+        <div class="features" id="pricing">
             <div class="content">
                 <div class="fea-image">
                     <img src="./acssets/img/tải xuống.jpg" alt="" class="image">
@@ -238,7 +238,7 @@
             </div>
         </div>
 
-        <div class="blog">
+        <div class="blog" id="Reviews">
             <div class="content">
                 <div class="noi-dung">
                     <h2 class="title">Our blog</h2>
