fix logo + nút watch video

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <header class="header">
             <div class="content">
                 <nav class="navbar">
-                    <div class="logo">
-                        <strong>Lesson</strong>
-                    </div>
+                    <a href="">
+                        <div class="logo">
+                            <strong>Lesson</strong>
+                        </div>
+                    </a>
                     <div class="menu">
                         <div class="item">
                             <a href="#Home">Home</a>
