fix test chi oanh

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <div class="item">
                             <a href="#Reviews">Reviews</a>
                         </div>
-                        <button class="btn btn-sign_up">
+                            <a href="" class="btn btn-sign_up">
                             <p>Sign up</p>
-                        </button>
+                            </a>
                     </div>
                 </nav>
             </div>
@@ -56,7 +56,7 @@
         <!-- ======Main====== -->
         <div class="hero">
             <div class="content">
-                <img src="./acssets/img/f8456800ac55a50acda33ea6b9267e54.jpg" alt="con mèo" class="image">
+                <img src="./acssets/img/guy-lesson 1.png" alt="con mèo" class="image">
                 <div class="noi-dung">
                     <h1 class="title">
                         Learn without limits and spread knowledge.
@@ -65,11 +65,17 @@
                         Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.
                     </p>
                     <div class="action">
-                        <div class="see">
-                            <a href="">See Courses</a>
-                        </div>
-                        <div class="see">
-                            <img src="./acssets/img/Group 17513.svg" alt="" class="watch">
+                        <a href="">
+                            <p class="see">
+                                See Courses
+                            </p>
+                        </a>
+                        <div class="watch">
+                            <a href="">
+                                <div  class="play-watch">
+                                    <div class="tam-giac"></div>
+                                </div>
+                            </a>
                             <a href="">Watch Video</a>
                         </div>
                     </div>
@@ -126,7 +132,7 @@
                 </div>
                 <div class="list">
                     <a href=""><div class="card">
-                        <img src="./acssets/img/aaaaaaaa_093625302.jpg" alt="" class="anh-khoa-hoc">
+                        <img src="./acssets/img/Image (4).png" alt="" class="anh-khoa-hoc">
 
                         <div class="thong-tin">
                             <div class="name-rank">
@@ -148,7 +154,7 @@
 
                    <a href="">
                     <div class="card">
-                        <img src="./acssets/img/meo-khoc-cute.jpg" alt="" class="anh-khoa-hoc">
+                        <img src="./acssets/img/Image (5).png" alt="" class="anh-khoa-hoc">
 
                         <div class="thong-tin">
                             <div class="name-rank">
@@ -171,7 +177,7 @@
 
                     <a href="">
                         <div class="card">
-                            <img src="./acssets/img/meme-meo-khoc.png" alt="" class="anh-khoa-hoc">
+                            <img src="./acssets/img/Image (6).png" alt="" class="anh-khoa-hoc">
     
                             <div class="thong-tin">
                                 <div class="name-rank">
@@ -198,7 +204,7 @@
         <div class="feed-back">
             <div class="content">
                 <div class="person">
-                    <img src="./acssets/img/images.jpg" alt="" class="person-img">
+                    <img src="./acssets/img/Ellipse 2649.png" alt="" class="person-img">
                     <p class="name">Peter Moor</p>
                     <p class="position">Student of Web Design</p>
                     <div class="icon">
@@ -217,8 +223,8 @@
         <div class="features" id="pricing">
             <div class="content">
                 <div class="fea-image">
-                    <img src="./acssets/img/tải xuống.jpg" alt="" class="image">
-                    <img src="./acssets/img/tải xuống (1).jpg" alt="" class="image">
+                    <img src="./acssets/img/Rectangle 10.png" alt="" class="image">
+                    <img src="./acssets/img/Rectangle 11 (1).png" alt="" class="image">
                 </div>
                 <div class="noi-dung">
                     <h2 class="sub-title">Learner outcomes through our awesome platform</h2>
@@ -236,7 +242,7 @@
                     <p class="desc">Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>
                     <a href="" class="btn">Join Now</a>
                 </div>
-                <img src="./acssets/img/e16c704fc0b655e553dd7a1a8a00475d.jpg" alt="" class="image">
+                <img src="./acssets/img/Rectangle 11 (1).png" alt="" class="image">
             </div>
         </div>
 
@@ -250,7 +256,7 @@
                 <div class="list">
                     <a href="">
                         <div class="card">
-                            <img src="./acssets/img/tải xuống (2).jpg" alt="" class="blog-img">
+                            <img src="./acssets/img/marta-dall-omo-0XXliBVeIgI-unsplash (1).png" alt="" class="blog-img">
                             <div class="text">
                                 <p class="year">21 November 2021</p>
                                 <h3 class="sub-title">How to become a pro web designer in 2022 and get remot job?</h3>
@@ -261,7 +267,7 @@
 
                     <a href="">
                         <div class="card">
-                            <img src="./acssets/img/tải xuống (4).jpg" alt="" class="blog-img">
+                            <img src="./acssets/img/marta-dall-omo-0XXliBVeIgI-unsplash (1) (2).png" alt="" class="blog-img">
                             <div class="text">
                                 <p class="year">21 November 2021</p>
                                 <h3 class="sub-title">How to become a pro web designer in 2022 and get remot job?</h3>
@@ -272,7 +278,7 @@
 
                     <a href="">
                         <div class="card">
-                            <img src="./acssets/img/images (1).jpg" alt="" class="blog-img">
+                            <img src="./acssets/img/marta-dall-omo-0XXliBVeIgI-unsplash (1) (1).png" alt="" class="blog-img">
                             <div class="text">
                                 <p class="year">21 November 2021</p>
                                 <h3 class="sub-title">How to become a pro web designer in 2022 and get remot job?</h3>
@@ -293,7 +299,9 @@
             <div class="content">
                 <div class="row">
                     <div class="brand">
-                        <strong class="logo">Lesson</strong>
+                        <a href="">
+                            <strong class="logo">Lesson</strong>
+                        </a>
                         <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
                         <a href="">
                             <img src="./acssets/img/Social.svg" alt="">
@@ -320,8 +328,8 @@
                         <div class="about">
                             <h3 class="title">Address</h3>
                             <a href ="" class="sub-title"><strong class="quan-trong">Location:</strong> 27 Division St, New York, NY 10002, USA</a>
-                            <a href ="" class="sub-title"><strong>Email:</strong> email@gmail.com</a>
-                            <a href ="" class="sub-title"><strong>Phone:</strong> + 000 1234 567 890</a>
+                            <a href ="mailto:email@gmail.com" class="sub-title"><strong>Email:</strong> email@gmail.com</a>
+                            <a href ="tel:+0001234567890" class="sub-title"><strong>Phone:</strong> + 000 1234 567 890</a>
                         </div>
                     </div>
                     
